# autofov

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: aircraft.c  aircraft.h  collisions  conf.h  core.h  fov.c  fov.h  log.c  log.h  main.c
